fixed: header search bar close button alignment

--- a/mu-plugins/blocks/global-header-footer/postcss/header/header.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/header.pcss
@@ -92,7 +92,7 @@ html {
 
 /* The classic themes don't use the same modal view, so the offset needs to be changed. */
 body.is-classic-theme .wp-block-group.global-header .wp-block-navigation__responsive-container-close {
-	top: var(--wp-admin--admin-bar--height, 0);
+	top: 0;
 }
 
 /*
